--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+     <link type="text/css" rel="stylesheet" href="/global.css">
     <title>To Do List</title>
   </head>
 
