can filter out incomplete tasks

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,14 @@
 <ul>
+	All
 	<% @tasks.each do |t| %>
+
+		<li><%= t %></li>
+	<% end %>
+</ul>
+
+<ul>
+	Incomplete
+	<% @incomplete_tasks.each do |t| %>
 
 		<li><%= t %></li>
 	<% end %>
