can filter out complete tasks

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -13,3 +13,11 @@
 		<li><%= t %></li>
 	<% end %>
 </ul>
+
+<ul>
+	Complete
+	<% @complete_tasks.each do |t| %>
+
+		<li><%= t %></li>
+	<% end %>
+</ul>
