--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,1 +1,6 @@
-<input type="text" name="newTask">
+<form action="/addTask">
+	<input type="text" name="newTask"><br>
+	<input type="radio" name="name" value="Rachel">Rachel<br>
+	<input type="radio" name="name" value="Tyler">Tyler<br>
+	<input type="submit">
+</form>
