can add a new task, but deletes all other tasks from txt file

--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,6 +1,6 @@
 <form action="/addTask">
-	<input type="text" name="newTask"><br>
-	<input type="radio" name="name" value="Rachel">Rachel<br>
-	<input type="radio" name="name" value="Tyler">Tyler<br>
+	<input type="text" name="task"><br>
+	<input type="radio" name="person" value="Rachel">Rachel<br>
+	<input type="radio" name="person" value="Tyler">Tyler<br>
 	<input type="submit">
 </form>
