delete task - WIP

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,9 @@
 <div>
 	<a href="/new">Add a Task</a>
+	<% if @index
+		puts @index 
+		end %>
+
 </div>
 
 <div>
@@ -7,7 +11,11 @@
 		Incomplete
 		<% @incomplete_tasks.each do |t| %>
 
-			<li><%= t %></li>
+			<li><%= t[2] %></li>
+		<form action="/delete">
+			<input type="hidden" name="num" value="<%= t[3] %>">
+			<input type="submit" value="Delete">
+		</form>
 		<% end %>
 	</ul>
 
@@ -15,7 +23,7 @@
 		Complete
 		<% @complete_tasks.each do |t| %>
 
-			<li><%= t %></li>
+			<li><%= t[2] %></li>
 		<% end %>
 	</ul>
 </div>
