--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,7 +9,7 @@
 
 			<li><%= t[2] %></li>
 		<form action="/delete">
-			<input type="hidden" name="idNum" value="<%= t[3] %>">
+			<input type="hidden" name="num" value="<%= t[3][0..8] %>">
 			<input type="submit" value="Delete">
 		</form>
 		<% end %>
