moved nav links to layout.erb

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,12 @@
 
 <body>
 
-
+<div>
+	<a href="/new">Add a Task</a>
+	<a href="/filtered?user=Rachel"> Rachel</a>
+	<a href="/filtered?user=Tyler">Tyler</a>
+	<a href="/">Home</a>
+</div>
 
 <!-- The `yield` below is where the contents of a view file are put. -->
 <!-- Then the combined layout + view is sent back to the client. -->
